package com.fdmgroup.SmartPay_BackEnd.domain.entities;

public enum Role {
    USER,
    ADMIN
}